fixed Chat Title Styling & spacing

--- a/Angular/src/app/pages/chat/chat.component.css
+++ b/Angular/src/app/pages/chat/chat.component.css
@@ -211,7 +211,6 @@
 
 
 .DivWithScroll{
-  padding: 10px 7px 5px;
   height: 500px;
   overflow:scroll;
   overflow-x:hidden;
